--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <i class="fa fa-search-plus fa-3x"></i>
                   </div>
                 </div>
-                <img class="img-fluid" src="img/portfolio/oneRoof.jpg" alt="">
+                <img class="img-fluid" src="img/portfolio/filmClub.jpg" alt="">
               </a>
             </div>
             <div class="col-sm-6 portfolio-item">
@@ -235,7 +235,7 @@
                     <i class="fa fa-search-plus fa-3x"></i>
                   </div>
                 </div>
-                <img class="img-fluid" src="img/portfolio/oneRoof.jpg" alt="">
+                <img class="img-fluid" src="img/portfolio/pomodoro.jpg" alt="">
               </a>
             </div>
           </div>
@@ -339,28 +339,26 @@
               <div class="row">
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body">
-                    <h2>Project Title</h2>
-                    <hr class="star-primary">
-                    <img class="img-fluid img-centered" src="img/portfolio/circus.png" alt="">
-                    <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                      <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                    <ul class="list-inline item-details">
-                      <li>Client:
-                        <strong>
-                          <a href="http://startbootstrap.com">Start Bootstrap</a>
-                        </strong>
-                      </li>
-                      <li>Date:
-                        <strong>
-                          <a href="http://startbootstrap.com">April 2014</a>
-                        </strong>
-                      </li>
-                      <li>Service:
-                        <strong>
-                          <a href="http://startbootstrap.com">Web Development</a>
-                        </strong>
-                      </li>
-                    </ul>
+                    <h2 class="mb-4">Film Club</h2>
+                    <img class="img-fluid img-centered" src="img/portfolio/filmClub.jpg" alt="">
+                    <p>We were given layouts for a film club website for small, medium, and large devices and told to recreate them using HTML and CSS.</p>
+                    <span>Client:
+                      <strong>
+                        <span>Educational Purposes &nbsp; &nbsp;  </span>
+                      </strong>
+                    </span>
+                    <span>Date:
+                      <strong>
+                        <span>July 2017 &nbsp; &nbsp;</span>
+                      </strong>
+                    </span>
+                    <span>Service:
+                      <strong>
+                        <span>Web Development &nbsp; &nbsp;</span>
+                      </strong>
+                    </span>
+                  <br>
+                  <br>
                     <button class="btn btn-success" type="button" data-dismiss="modal">
                       <i class="fa fa-times"></i>
                       Close</button>
@@ -383,28 +381,26 @@
               <div class="row">
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body">
-                    <h2>Project Title</h2>
-                    <hr class="star-primary">
-                    <img class="img-fluid img-centered" src="img/portfolio/game.png" alt="">
-                    <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                      <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                    <ul class="list-inline item-details">
-                      <li>Client:
+                    <h2 class="mb-4">Pomodoro</h2>
+                    <img class="img-fluid img-centered" src="img/portfolio/pomodoro.jpg" alt="">
+                    <p>A pomodoro timer that switches between focus and break states and allows users to enter in the task they are working on. Built using Java, JavaFX, CSS, and FXML. From a Team Treehouse tutorial.</p>
+                      <span>Client:
                         <strong>
-                          <a href="http://startbootstrap.com">Start Bootstrap</a>
+                          <span>Educational Purposes &nbsp; &nbsp;  </span>
                         </strong>
-                      </li>
-                      <li>Date:
+                      </span>
+                      <span>Date:
                         <strong>
-                          <a href="http://startbootstrap.com">April 2014</a>
+                          <span>October 2017 &nbsp; &nbsp;</span>
                         </strong>
-                      </li>
-                      <li>Service:
+                      </span>
+                      <span>Service:
                         <strong>
-                          <a href="http://startbootstrap.com">Web Development</a>
+                          <span>Web Development &nbsp; &nbsp;</span>
                         </strong>
-                      </li>
-                    </ul>
+                      </span>
+                    <br>
+                    <br>
                     <button class="btn btn-success" type="button" data-dismiss="modal">
                       <i class="fa fa-times"></i>
                       Close</button>
